Bug 475837 - Wrong link (URL) for the bug report button
Summary: Wrong link (URL) for the bug report button
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: 23.08.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords:
: 481421 483369 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-10-19 17:29 UTC by K0RR
Modified: 2024-03-12 20:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description K0RR 2023-10-19 17:29:59 UTC
When you open KDE Connect settings and click "About KDE Connect", the "Report a bug" button opens wrong website - "https://bugs.kde.org/enter_bug.cgi?format=guided&product=kdeconnect.app&version=23.08.1" instead of "https://bugs.kde.org/enter_bug.cgi?format=guided&product=kdeconnect&version=23.08.1" which results in the following message "Sorry, either the product kdeconnect.app does not exist or you aren't authorized to enter a bug into it. "
Comment 1 Bug Janitor Service 2023-10-21 22:36:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kdeconnect-kde/-/merge_requests/608
Comment 2 Nicolas Fella 2023-10-24 20:39:29 UTC
Git commit 4331d70d4b1d247a0fda2d4f6d1c2c1bdc5c18a8 by Nicolas Fella.
Committed on 24/10/2023 at 22:30.
Pushed by nicolasfella into branch 'master'.

Set bugreport address for kdeconnect-app

Otherwise we get an automatic address, which doesn't work because the executable name doesn't match the bugzilla component name

M  +1    -0    app/main.cpp

https://invent.kde.org/network/kdeconnect-kde/-/commit/4331d70d4b1d247a0fda2d4f6d1c2c1bdc5c18a8
Comment 3 Nicolas Fella 2024-02-18 18:15:19 UTC
*** Bug 481421 has been marked as a duplicate of this bug. ***
Comment 4 Nicolas Fella 2024-03-12 20:11:56 UTC
*** Bug 483369 has been marked as a duplicate of this bug. ***