Set bugreport address for kdeconnect-app

Otherwise we get an automatic address, which doesn't work because the executable name doesn't match the bugzilla component name

BUG: 475837